--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
     "jwt-decode": "^4.0.0",
     "ky": "^1.8.1",
     "lucide-react": "^0.525.0",
